<resources>
    <string name="app_name">HospitaTo</string>
    <string name="title_activity_map_view">Map</string>
    <string name="mapButton">Map</string>
    <string name="homeButton" translatable="false">Home</string>
    <string name="profileButton">Profile</string>
    <string name="filterButton">Filter</string>
    <string name="direction_server_key" translatable="false">AIzaSyANzbEFTwOhnhHftnLx69rt2IlZeL-O5xs</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="title_activity_login_view">Sign_in</string>
    <string name="facebook_app_id" translatable="false">317849505568538</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb317849505568538</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="green_waiting_time">Green Waiting Time</string>
    <string name="white_waiting_time">White Waiting Time</string>
    <string name="estimated_travel_time">Estimated Travel Time</string>
    <string name="filter_results">FILTER RESULTS</string>
    <string name="number_of_waiting_people">WAITING PEOPLE</string>
    <string name="number_of_people_treatment">PEOPLE IN TREATMENT</string>

    <string name="red_tag" translatable="false">0</string>
    <string name="yellow_tag" translatable="false">0</string>
    <string name="green_tag" translatable="false">0</string>
    <string name="white_tag" translatable="false">0</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="skitIt">Skip It</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Best Hospital</string>
    <string name="tab_text_2">Filter by department</string>
    <string name="estimated_time">Estimated Time: </string>
    <string name="starIndication">*Includes waiting time and travel time</string>
    <string name="logout">Logout</string>
    <string name="nameLabel">Name</string>
    <string name="surnameLabel">Surname</string>
    <string name="birthdayLabel">gg/mm/aaaa</string>
    <string name="heightLabel">Height</string>
    <string name="bloodLabel">Blood Group</string>
    <string name="emailLabel">Email</string>
    <string name="weightLabel">Weight</string>
    <string name="sendButton">Submit</string>
    <string name="yourPosition">Your Position</string>
    <string name="data_not_avaialable">Data not available</string>
    <string name="title_activity_maps">Map</string>
    <array name="hospital">
        <item>Molinette</item>
        <item>Regina Margherita</item>
        <item>Sant Anna</item>
        <item>CTO</item>
    </array>
    <array name="estimation">
        <item>good</item>
        <item>sovrastimated</item>
        <item>underestimated</item>
    </array>
</resources>
