<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profileButton"
        android:icon="@drawable/ic_main_profile_icon"
        android:title="@string/profileButton"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/registerButton"
        android:title="@string/signUp"
        android:visible="false"
        />

    <item
        android:id="@+id/logoutButton"
        android:title="@string/logout"
        android:visible="false"
        />
    <item
        android:id="@+id/loginButton"
        android:title="@string/signIn"
        android:visible="false"
        >
    </item>
    <item
        android:id="@+id/feedButton"
        android:title="Leave a feedback"
        android:visible="true"
        >
    </item>
</menu>