<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:background="@color/White">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/ED_name_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ED'S NAME"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Address"
            android:id="@+id/ED_address_f"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:textSize="18dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="PhoneNumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green_waiting_time"
                    android:layout_gravity="center"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/G_waitingTime_f"
                    android:textStyle="bold"
                    android:layout_margin="2dp"
                    android:paddingHorizontal="2dp"
                    android:background="@color/GreenTag"
                    android:textColor="@color/White"
                    android:textAlignment="center"
                    android:text="@string/green_waiting_time"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white_waiting_time"
                    android:layout_gravity="center"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/W_waitingTime_f"
                    android:textStyle="bold"
                    android:layout_margin="2dp"
                    android:paddingHorizontal="2dp"
                    android:background="@color/White"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:text="@string/white_waiting_time"/>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/estimated_travel_time"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:id="@+id/travel_time_label"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"/>

        <TextView
            android:id="@+id/estimated_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:text="00:00" />



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Waitings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/number_of_waiting_people"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            >


        <TextView
            android:id="@+id/RedTag"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/BlackP"
            android:paddingHorizontal="5dp"
            android:padding="10dp"
            android:background="@color/RedTag"
            android:text="@string/red_tag" />

        <TextView
            android:id="@+id/YellowTag"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/YellowTag"
            android:textColor="@color/BlackP"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="5dp"
            android:padding="10dp"
            android:text="@string/yellow_tag" />

        <TextView
            android:id="@+id/GreenTag"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:background="@color/GreenTag"
            android:textColor="@color/BlackP"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/green_tag" />

        <TextView
            android:id="@+id/WhiteTag"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/White"
            android:textColor="@color/BlackP"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:paddingHorizontal="0dp"
            android:padding="10dp"
            android:text="@string/white_tag" />

            <TextView
                android:id="@+id/data_not_available_wait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:textStyle="italic"
                android:textAlignment="center"
                android:text="@string/data_not_avaialable"
                android:layout_margin="10dp"
                />
    </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/number_of_people_treatment"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="50dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/RedTreat"
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/BlackP"
                android:layout_centerHorizontal="true"
                android:paddingHorizontal="5dp"
                android:padding="10dp"
                android:background="@color/RedTag"
                android:text="@string/red_tag" />

            <TextView
                android:id="@+id/YellowTreat"
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@color/YellowTag"
                android:textColor="@color/BlackP"
                android:layout_centerHorizontal="true"
                android:paddingHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/yellow_tag" />

            <TextView
                android:id="@+id/GreenTreat"
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@color/GreenTag"
                android:textColor="@color/BlackP"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/green_tag" />

            <TextView
                android:id="@+id/WhiteTreat"
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@color/White"
                android:textColor="@color/BlackP"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:paddingHorizontal="0dp"
                android:padding="10dp"
                android:text="@string/white_tag" />

            <TextView
                android:id="@+id/data_not_available_treat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:textStyle="italic"
                android:textAlignment="center"
                android:text="@string/data_not_avaialable"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        </LinearLayout>

        </LinearLayout>
        <com.google.android.gms.maps.MapView
            android:id="@+id/lite_map"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            map:liteMode="true"
            map:mapType="none"
            android:layout_margin="10dp"
            />

        </LinearLayout>


</android.support.v4.widget.NestedScrollView>